"去掉登录界面"

--- a/src/main/resources/templates/startSelect.html
+++ b/src/main/resources/templates/startSelect.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Welcome</title>
@@ -17,11 +17,9 @@
     <script src="/js/bootstrap.js"></script>
     <!-- 引入js脚本文件 -->
     <script src="/js/request.js"></script>
-    <script src="/js/indexTrue.js"></script>
 </head>
 <body>
-<button onclick="startCamera()" type="button" class="btn btn-success">开始人脸拟合</button>
-<a href="/user/startSelect">开始故事讲述</a>
+    <h1>选择故事模板</h1>
+    <a href="/user/startTalking">开始讲故事</a>
 </body>
-
 </html>
