--- a/src/main/resources/templates/startTalking.html
+++ b/src/main/resources/templates/startTalking.html
@@ -17,11 +17,14 @@
     <script src="/js/bootstrap.js"></script>
     <!-- 引入js脚本文件 -->
     <script src="/js/request.js"></script>
-    <script src="/js/indexTrue.js"></script>
+    <script src="/js/index1.js"></script>
 </head>
 <body>
-<button onclick="startCamera()" type="button" class="btn btn-success">开始人脸拟合</button>
-<a href="/user/startSelect">开始故事讲述</a>
+<input type="file" onchange="playMusic.call(this)" class="select-file">
+<audio class="audio-node" autoplay></audio>
+<button onclick="record()">开始录音</button>
+<button onclick="stopRecord()">停止录音</button>
+<a href="start.html">拍照</a>
 </body>
 
 </html>
