"去掉登录界面"

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
 <button onclick="startCamera()" type="button" class="btn btn-success">开始人脸拟合</button>
-<a href="/user/startSelect">开始故事讲述</a>
+<a class="zanshi" href="/user/startSelect">开始故事讲述</a>
 </body>
 
 </html>
