--- a/src/main/resources/templates/startSelect.html
+++ b/src/main/resources/templates/startSelect.html
@@ -2,15 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Welcome</title>
-    <!-- 引入css样式文件 -->
+    <!--视口的设置，让网页能等比例的缩放到对应设备中-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!--告诉ie浏览器用最新内核去渲染网页-->
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+
     <link rel="stylesheet" type="text/css" href="/css/index.css"/>
     <link rel="stylesheet" type="text/css" href="/css/common.css"/>
     <!-- Bootstrap 核心 CSS 文件 -->
     <link rel="stylesheet" type="text/css" href="/css/bootstrap.css"/>
     <!-- font-asesome图标库 -->
     <link rel="stylesheet" type="text/css" href="/css/font-awesome.min.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/startSelect.css"/>
 
+
+    <!--jquery.js 一定要放在bootstrap.min.js之前，如果不放报错-->
     <!-- jquery -->
     <script src="/js/jquery.js"></script>
     <!-- Bootstrap 核心 JavaScript 文件 -->
@@ -19,7 +25,38 @@
     <script src="/js/request.js"></script>
 </head>
 <body>
-    <h1>选择故事模板</h1>
-    <a href="/user/startTalking">开始讲故事</a>
+<div class="container">
+    <h1>请选择一个自己喜欢的场景吧~</h1>
+    <div class="row">
+        <a href="/user/startTalking?view='ocean'">
+            <div class="col-lg-3 col-md-4">
+                <div class="items text-center">
+                    <img class="img-responsive" src="/images/fish.jpg" />
+                    <h3>海洋</h3>
+                    <p>在大海中住着一群神奇的生物，故事就在海底世界发生了··· ···</p>
+                </div>
+            </div>
+        </a>
+        <a href="/user/startTalking?view='home'">
+            <div class="col-lg-3 col-md-4">
+                <div class="items text-center">
+                    <img class="img-responsive" src="/images/chengbao.jpg" />
+                    <h3>城堡</h3>
+                    <p>城堡里住着王子、公主和骑士，他们会碰撞出怎样的火花呢？</p>
+                </div>
+            </div>
+        </a>
+        <a href="/user/startTalking?view='true'">
+            <div class="col-lg-3 col-md-4">
+                <div class="items text-center">
+                    <img class="img-responsive" src="/images/senlin.jpg" />
+                    <h3>森林</h3>
+                    <p>在森林里，小动物和女巫之间会发生怎样的故事呢？你想知道嘛？</p>
+                </div>
+            </div>
+        </a>
+    </div>
+</div>
+
 </body>
 </html>
