--- a/src/main/resources/templates/startTalking.html
+++ b/src/main/resources/templates/startTalking.html
@@ -20,11 +20,11 @@
     <script src="/js/index1.js"></script>
 </head>
 <body>
-<input type="file" onchange="playMusic.call(this)" class="select-file">
-<audio class="audio-node" autoplay></audio>
-<button onclick="record()">开始录音</button>
-<button onclick="stopRecord()">停止录音</button>
-<a href="start.html">拍照</a>
+<!--    <input type="file" onchange="playMusic.call(this)" class="select-file">-->
+    <audio class="audio-node" autoplay></audio>
+    <button onclick="record()">开始录音</button>
+    <button onclick="stopRecord()">停止录音</button>
+<!--    <a href="start.html">拍照</a>-->
 </body>
 
 </html>
