--- a/src/main/resources/static/css/bootstrap.css
+++ b/src/main/resources/static/css/bootstrap.css
@@ -1086,7 +1086,7 @@ body {
   font-size: 14px;
   line-height: 1.42857143;
   color: #333;
-  background-color: #fff;
+  background-color: #dff0d8;
 }
 input,
 button,
@@ -1098,7 +1098,7 @@ textarea {
 }
 a {
   /*color: #337ab7;*/
-  color:crimson;
+  color: #6ac35d;
   text-decoration: none;
 }
 a:hover,
@@ -1188,7 +1188,7 @@ h6,
   font-family: inherit;
   font-weight: 500;
   line-height: 1.1;
-  color: inherit;
+  color: green;
 }
 h1 small,
 h2 small,
