--- a/src/main/resources/templates/startSelect.html
+++ b/src/main/resources/templates/startSelect.html
@@ -23,12 +23,14 @@
     <script src="/js/bootstrap.js"></script>
     <!-- 引入js脚本文件 -->
     <script src="/js/request.js"></script>
+    <script src="/js/startSelect.js"></script>
+
 </head>
 <body>
 <div class="container">
     <h1>请选择一个自己喜欢的场景吧~</h1>
     <div class="row">
-        <a href="/user/startTalking?view='ocean'">
+        <a href="/user/selectOcean">
             <div class="col-lg-3 col-md-4">
                 <div class="items text-center">
                     <img class="img-responsive" src="/images/fish.jpg" />
@@ -57,6 +59,6 @@
         </a>
     </div>
 </div>
-
+<audio src="/video/selectBackground.wav" autoplay="autoplay"></audio>
 </body>
 </html>
