--- a/src/main/resources/templates/startTalking.html
+++ b/src/main/resources/templates/startTalking.html
@@ -31,6 +31,8 @@
     <div id="word-container"></div>
 </div>
 <!--    <a href="start.html">拍照</a>-->
+<div id="image-container">
+</div>
 </body>
 
 </html>
