"新增图片服务器上传功能"

--- a/src/main/resources/templates/startTalking.html
+++ b/src/main/resources/templates/startTalking.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" type="text/css" href="/css/font-awesome.min.css"/>
     <link rel="stylesheet" type="text/css" href="/css/startTalking.css"/>
 
+    <script src="/js/qiniu.min.js"></script>
     <!-- jquery -->
     <script src="/js/jquery.js"></script>
     <!-- Bootstrap 核心 JavaScript 文件 -->
