--- a/src/main/resources/templates/startSelect.html
+++ b/src/main/resources/templates/startSelect.html
@@ -39,7 +39,7 @@
                 </div>
             </div>
         </a>
-        <a href="/user/startTalking?view='home'">
+        <a href="/user/selectHouse">
             <div class="col-lg-3 col-md-4">
                 <div class="items text-center">
                     <img class="img-responsive" src="/images/chengbao.jpg" />
@@ -48,7 +48,7 @@
                 </div>
             </div>
         </a>
-        <a href="/user/startTalking?view='true'">
+        <a href="/user/selectTree">
             <div class="col-lg-3 col-md-4">
                 <div class="items text-center">
                     <img class="img-responsive" src="/images/senlin.jpg" />
