"加了/photo方法的getRequest"

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -22,6 +22,7 @@
 <body>
 <button onclick="startCamera()" type="button" class="btn btn-success">开始人脸拟合</button>
 <a class="zanshi" href="/user/startSelect">开始故事讲述</a>
+<div id="image-container"></div>
 </body>
 
 </html>
