--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="/css/bootstrap.css"/>
     <!-- font-asesome图标库 -->
     <link rel="stylesheet" type="text/css" href="/css/font-awesome.min.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/index.css"/>
 
     <!-- jquery -->
     <script src="/js/jquery.js"></script>
@@ -20,9 +21,13 @@
     <script src="/js/indexTrue.js"></script>
 </head>
 <body>
-<button onclick="startCamera()" type="button" class="btn btn-success">开始人脸拟合</button>
-<a class="zanshi" href="/user/startSelect">开始故事讲述</a>
+<!--<div><h1>请选择自己想要的拟合方式~</h1></div>-->
+<button onclick="startCamera()" type="button" class="btn btn-success" id="camera-button1">使用人脸拟合</button>
+<button onclick="startImage()" type="button" class="btn btn-success" id="camera-button2">使用卡通拟合</button>
+<!--<a class="zanshi" href="/user/startSelect">开始故事讲述</a>-->
+<!--<div id="image-container"></div>-->
 <div id="image-container"></div>
+<audio src="/video/camera.wav" autoplay="autoplay"></audio>
 </body>
 
 </html>
