--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -18,11 +18,11 @@ body {
 .border {
 	box-sizing: border-box;
 	position: relative;
-	background: black;
-	background-image: -webkit-linear-gradient(top right, #5D5D5B, #383838);
-	background-image: linear-gradient(top right, #5D5D5B, #383838);
+	background: #6ac35d;
+	background-image: -webkit-linear-gradient(top right, #63804e, #2a3804);
+	background-image: linear-gradient(top right, #63804e, #2a3804);
 	padding: 7px;
-	width: 500px;
+	width: 300px;
 	box-shadow: -1px 1px var(--blur) 1px rgba(0, 0, 0, 0.1), -2px 2px var(--blur) 1px rgba(0, 0, 0, 0.09), -3px 3px var(--blur) 1px rgba(0, 0, 0, 0.08), -4px 4px var(--blur) 1px rgba(0, 0, 0, 0.07), -5px 5px var(--blur) 1px rgba(0, 0, 0, 0.06), -6px 6px var(--blur) 1px rgba(0, 0, 0, 0.05), -7px 7px var(--blur) 1px rgba(0, 0, 0, 0.04), -8px 8px var(--blur) 1px rgba(0, 0, 0, 0.03), -9px 9px var(--blur) 1px rgba(0, 0, 0, 0.03), -10px 10px var(--blur) 1px rgba(0, 0, 0, 0.03), -11px 11px var(--blur) 1px rgba(0, 0, 0, 0.03), -12px 12px var(--blur) 1px rgba(0, 0, 0, 0.02), -13px 13px var(--blur) 1px rgba(0, 0, 0, 0.02), -14px 14px var(--blur) 1px rgba(0, 0, 0, 0.01), -15px 15px var(--blur) 1px rgba(0, 0, 0, 0.01), -16px 16px var(--blur) 1px rgba(0, 0, 0, 0.01);
 }
 .border:before {
@@ -36,7 +36,7 @@ body {
 	box-shadow: inset -1px 1px 6px 1px rgba(0, 0, 0, 0.24);
 	width: 94%;
 	height: 95%;
-	background: white;
+	background: #f2dede;
 	-webkit-box-align: center;
 	-ms-flex-align: center;
 	align-items: center;
