"语音大眼睛小嘴巴"

--- a/src/main/resources/templates/selectPs.html
+++ b/src/main/resources/templates/selectPs.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>选择了海洋模板</title>
+    <title>直接PS</title>
     <link rel="stylesheet" type="text/css" href="/css/bootstrap.css"/>
     <!-- font-asesome图标库 -->
     <link rel="stylesheet" type="text/css" href="/css/font-awesome.min.css"/>
@@ -20,5 +20,7 @@
 </head>
 <body>
 <div id="image-container"></div>
+<button onclick="tiaozheng()" type="button" class="btn btn-success">继续美化</button>
+<button onclick="jinru()" type="button" class="btn btn-success">跳过</button>
 </body>
 </html>
