--- a/src/main/resources/templates/selectHouse.html
+++ b/src/main/resources/templates/selectHouse.html
@@ -31,6 +31,6 @@
 
 </div>
 
-<audio src="/video/ocean.wav" autoplay="autoplay"></audio>
+<audio src="/video/house.wav" autoplay="autoplay"></audio>
 </body>
 </html>
