--- a/src/main/resources/templates/selectTree.html
+++ b/src/main/resources/templates/selectTree.html
@@ -29,6 +29,6 @@
 
 </div>
 
-<audio src="/video/ocean.wav" autoplay="autoplay"></audio>
+<audio src="/video/tree.wav" autoplay="autoplay"></audio>
 </body>
 </html>
