--- a/src/main/resources/templates/startTalking.html
+++ b/src/main/resources/templates/startTalking.html
@@ -24,16 +24,23 @@
 <body>
 <div class="talking">
 <!--    <input type="file" onchange="playMusic.call(this)" class="select-file">-->
-    <audio class="audio-node" autoplay></audio>
-    <button id="start-button" class="btn btn-lg btn-primary" onclick="record()">开始录音</button>
-    <button id="end-button" class="btn btn-lg btn-primary" disabled="disabled" onclick="stopRecord()">停止录音</button>
+    <div class="talkingButton">
+        <audio class="audio-node" autoplay></audio>
+        <button id="start-button" class="btn btn-lg btn-primary" onclick="record()">开始录音</button>
+        <button id="end-button" class="btn btn-lg btn-primary" disabled="disabled" onclick="stopRecord()">停止录音</button>
+    </div>
+    <div class="nextStep">
+        <button class="btn btn-lg btn-primary" onclick="finishCreate()">故事完成</button>
+        <button class="btn btn-lg btn-primary" onclick="finishCreate()">继续讲述</button>
+    </div>
 </div>
-<div id="result-container">
+<div id="result-container" class="word">
     <div id="word-container"></div>
+    <div id="image-container" class="image"></div>
 </div>
 <!--    <a href="start.html">拍照</a>-->
-<div id="image-container">
-</div>
+
+
 </body>
 
 </html>
