"更新了前端"

--- a/src/main/resources/templates/finish.html
+++ b/src/main/resources/templates/finish.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="/css/bootstrap.css"/>
     <!-- font-asesome图标库 -->
     <link rel="stylesheet" type="text/css" href="/css/font-awesome.min.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/finish.css"/>
 
     <script src="/js/qiniu.min.js"></script>
     <!-- jquery -->
@@ -17,9 +18,20 @@
     <script src="/js/bootstrap.js"></script>
     <!-- 引入js脚本文件 -->
     <script src="/js/request.js"></script>
+    <script src="/js/finish.js"></script>
 </head>
 <body>
-<h1>最终的展示页面</h1>
+<div style="text-align:center;clear:both;">
+</div>
+
+
+
+
+
+<div id="gallery">
+    <ul id="image-container">
+
+    </ul>
 </div>
 </body>
 
