--- a/src/main/resources/templates/startTalking.html
+++ b/src/main/resources/templates/startTalking.html
@@ -31,7 +31,7 @@
     </div>
     <div class="nextStep">
         <button class="btn btn-lg btn-primary" onclick="finishCreate()">故事完成</button>
-        <button class="btn btn-lg btn-primary" onclick="finishCreate()">继续讲述</button>
+        <button class="btn btn-lg btn-primary" onclick="finishCreate2()">继续讲述</button>
     </div>
 </div>
 <div id="result-container" class="word">
