--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -27,8 +27,10 @@
 <!--<a class="zanshi" href="/user/startSelect">开始故事讲述</a>-->
 <!--<div id="image-container"></div>-->
 <div id="image-container"></div>
-<button style="display: none" onclick="picturePs()" type="button" class="btn btn-success" id="camera-button3">抠图拼接</button>
-<button style="display: none" onclick="pictureFix()" type="button" class="btn btn-success" id="camera-button4">人脸拟合</button>
+<div id="button-container" style="display: none">
+    <button  onclick="picturePs()" type="button" class="btn btn-success" id="camera-button3">抠图拼接</button>
+    <button  onclick="pictureFix()" type="button" class="btn btn-success" id="camera-button4">人脸拟合</button>
+</div>
 
 
 <audio src="/video/camera.wav" autoplay="autoplay"></audio>
