--- a/src/main/resources/templates/selectPs.html
+++ b/src/main/resources/templates/selectPs.html
@@ -9,6 +9,7 @@
 
     <!-- 引入css样式文件 -->
     <link rel="stylesheet" type="text/css" href="/css/common.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/fixAndPs.css"/>
 
     <!-- 引入js脚本文件 -->
     <!-- jquery -->
